# aws_acc

./: Chalice-aws-app-nots  Chalice-aws-app-usage-notes  README.md  chalice_workshop_notes  pyproject.toml  result.html
aws_acc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
awsaccadmin/: .gitignore  Confluence-Owners-AWS-Deleted-Accounts2.csv  Confluence-Owners-AWS2.csv  app.py  aws-account-ownership-organization.py  createtable.py  py_test_acc_add.py  pyaws_acc_admin.py  read_confluence.py  scrape_confluence_table.py  update_confluence.py
awsaccadmin/.chalice/: config.json  policy-dev.json
awsaccadmin/.chalice/deployed/: dev.json  prod.json
awsaccadmin/chalicelib/: auth.py  db.py
awsaccadmin/chalicelib/__pycache__/: db.cpython-38.pyc.4459983184
tests/: test_aws_acc.py
